--- a/css/main.css
+++ b/css/main.css
@@ -1456,28 +1456,92 @@ img {
 
 /* portfolio page styles */
 .portfolio {
-  padding-bottom: 94px;
-  padding-top: 94px;
+  padding-bottom: 60px;
+  padding-top: 60px;
+}
+@media screen and (min-width: 1200px) {
+  .portfolio {
+    padding-bottom: 94px;
+    padding-top: 94px;
+  }
 }
 
 .button-list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  gap: 8px;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  margin-bottom: 50px;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  width: 90%;
+  -webkit-column-gap: 8px;
+     -moz-column-gap: 8px;
+          column-gap: 8px;
+  row-gap: 15px;
+  margin-bottom: 40px;
+}
+@media screen and (min-width: 768px) {
+  .button-list {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    width: 100%;
+    margin-bottom: 30px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .button-list {
+    margin-bottom: 50px;
+  }
 }
 
 .cards__list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   gap: 30px;
+}
+@media screen and (min-width: 768px) {
+  .cards__list {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+}
+@media screen and (min-width: 768px) {
+  .cards__item {
+    width: calc((100% - 30px) / 2);
+  }
+}
+@media screen and (min-width: 1200px) {
+  .cards__item {
+    width: calc((100% - 60px) / 3);
+  }
+}
+
+.cards__thumb {
+  position: relative;
+  overflow: hidden;
+  width: 450px;
+  height: 294px;
+}
+@media screen and (min-width: 768px) {
+  .cards__thumb {
+    width: 354px;
+    height: 294px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .cards__thumb {
+    width: 370px;
+    height: 294px;
+  }
 }
 
 .cards__link {
@@ -1495,13 +1559,6 @@ img {
 .cards__link:hover .cards__overlay {
   -webkit-transform: translatey(0);
           transform: translatey(0);
-}
-
-.cards__thumb {
-  position: relative;
-  overflow: hidden;
-  width: 370px;
-  height: 294px;
 }
 
 .cards__overlay {
@@ -1537,7 +1594,6 @@ img {
 .cards__pic {
   display: block;
   width: 100%;
-  height: 100%;
   -o-object-fit: cover;
      object-fit: cover;
 }
@@ -1554,6 +1610,16 @@ img {
   line-height: 2;
   letter-spacing: 0.06em;
   color: var(--secondary-text-color);
+}
+@media screen and (min-width: 768px) {
+  .cards__title {
+    font-size: 17px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .cards__title {
+    font-size: 18px;
+  }
 }
 
 .cards__subtitle {
