--- a/scss/layouts/_portfolio.scss
+++ b/scss/layouts/_portfolio.scss
@@ -1,25 +1,78 @@
 /* portfolio page styles */
 
 .portfolio {
-  padding-bottom: 94px;
-  padding-top: 94px;
+  padding-bottom: 60px;
+  padding-top: 60px;
+
+  @include media-screen(desktop) {
+    padding-bottom: 94px;
+    padding-top: 94px;
+  }
 }
 
 .button-list {
   display: flex;
-  gap: 8px;
-  justify-content: center;
-  margin-bottom: 50px;
+  flex-wrap: wrap;
+  width: 90%;
+  column-gap: 8px;
+  row-gap: 15px;
+  margin-bottom: 40px;
+
+  @include media-screen(tablet) {
+    justify-content: center;
+    width: 100%;
+    margin-bottom: 30px;
+  }
+
+  @include media-screen(desktop) {
+    margin-bottom: 50px;
+  }
 }
 
 .cards__list {
   display: flex;
-  flex-wrap: wrap;
+  flex-direction: column;
   gap: 30px;
+
+  @include media-screen(tablet) {
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+
+  @include media-screen(desktop) {
+  }
+}
+
+.cards__item {
+  @include media-screen(tablet) {
+    width: calc((100% - 30px) / 2);
+  }
+
+  @include media-screen(desktop) {
+    width: calc((100% - 60px) / 3);
+  }
+}
+
+.cards__thumb {
+  position: relative;
+  overflow: hidden;
+  width: 450px;
+  height: 294px;
+
+  @include media-screen(tablet) {
+    width: 354px;
+    height: 294px;
+  }
+
+  @include media-screen(desktop) {
+    width: 370px;
+    height: 294px;
+  }
 }
 
 .cards__link {
   display: block;
+  // width: 100%;
 
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
@@ -32,14 +85,6 @@
 
 .cards__link:hover .cards__overlay {
   transform: translatey(0);
-}
-
-.cards__thumb {
-  position: relative;
-  overflow: hidden;
-
-  width: 370px;
-  height: 294px;
 }
 
 .cards__overlay {
@@ -70,7 +115,7 @@
 .cards__pic {
   display: block;
   width: 100%;
-  height: 100%;
+
   object-fit: cover;
 }
 
@@ -87,6 +132,14 @@
   line-height: 2;
   letter-spacing: 0.06em;
   color: var(--secondary-text-color);
+
+  @include media-screen(tablet) {
+    font-size: 17px;
+  }
+
+  @include media-screen(desktop) {
+    font-size: 18px;
+  }
 }
 
 .cards__subtitle {
